Fixed URL bar being too short in popups in 133+

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbar-searchbar.scss
@@ -157,6 +157,11 @@
 	}
 
 	&[is133Plus] {
+		// Fix URL bar being too short in popups.
+		&[chromehidden~="toolbar"] #urlbar {
+			position: relative !important;
+		}
+
 		#urlbar {
 			&[breakout],
 			&[breakout][breakout-extend] {
